--- a/src/app/controls/picture/picture.component.scss
+++ b/src/app/controls/picture/picture.component.scss
@@ -12,7 +12,7 @@
 
 .label {
   position: absolute;
-  z-index: 10;
+  z-index: 20;
 }
 
 @mixin center {
