--- a/src/app/controls/tabbed-window/tabbed-window.component.scss
+++ b/src/app/controls/tabbed-window/tabbed-window.component.scss
@@ -22,13 +22,13 @@
       background-color: white;
       border-radius: 0.2rem;
       opacity: 0;
-      z-index: -10;
+      z-index: -100;
       transition: all 0.25s;
       cursor: pointer;
 
       &.arrowVisible {
         opacity: 0.8;
-        z-index: 10;
+        z-index: 20;
       }
 
       &:hover {
