--- a/src/scss/_layout.scss
+++ b/src/scss/_layout.scss
@@ -40,7 +40,7 @@ body {
   padding: 0;
   border: none;
   user-select: none;
-  z-index: -10;
+  z-index: -100;
   transform: translateY(-100%);
 }
 
