--- a/src/scss/_scrollbars.scss
+++ b/src/scss/_scrollbars.scss
@@ -104,5 +104,5 @@
 }
 
 .os-scrollbar {
-  z-index: 20;
+  z-index: 60;
 }
